<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <TextView
        android:id="@+id/textViewUserType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/txtUserType"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupUserType"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserType">

        <RadioButton
            android:id="@+id/radioButtonOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonOwner" />

        <RadioButton
            android:id="@+id/radioButtonWorker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonWorker" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCreateAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupUserType" />
</androidx.constraintlayout.widget.ConstraintLayout>